--- a/index.html
+++ b/index.html
@@ -1211,11 +1211,11 @@ input[type="search"]::-webkit-search-cancel-button {
 <div class="variacoes">
   <div class="linha">
     <span>2L — R$ 10,00</span>
-    <button onclick="addProduto('Desinfetante Concentrado Chá Branco 2L',10)">Adicionar</button>
+   <button onclick="addProduto('desinfetante-cha-2l','Desinfetante Chá Branco 2L',10)">Adicionar</button>
   </div>
-  <div class="linha">
+  <div class="linha"> 
     <span>5L — R$ 24,00</span>
-    <button onclick="addProduto('Desinfetante Concentrado Chá Branco 5L',24)">Adicionar</button>
+<button onclick="addProduto('desinfetante-cha-5l','Desinfetante Chá Branco 5L',24)">Adicionar</button>
   </div>
 </div>
 </div>
@@ -1229,11 +1229,11 @@ data-nomes="desinfetante, desinfetante liquido, limpa tudo, limpeza, produto de 
 <div class="variacoes">
   <div class="linha">
     <span>2L — R$ 6,00</span>
-    <button onclick="addProduto('Desinfetante Top Flour 2L',6)">Adicionar</button>
+    <button onclick="addProduto('desinfetante-top-2l','Desinfetante Top Flour 2L',6)">Adicionar</button>
   </div>
   <div class="linha">
     <span>5L — R$ 15,00</span>
-    <button onclick="addProduto('Desinfetante Top Flour 5L',15)">Adicionar</button>
+    <button onclick="addProduto('desinfetante-top-5l','Desinfetante Top Flour 5L',15)">Adicionar</button>
   </div>
 </div>
 </div>
@@ -1283,11 +1283,11 @@ data-nomes="desinfetante, desinfetante liquido, limpa tudo, limpeza, produto de 
 <div class="variacoes">
   <div class="linha">
     <span>2L — R$ 6,00</span>
-    <button onclick="addProduto('Desinfetante Bambu 2L',6)">Adicionar</button>
+      <button onclick="addProduto('desinfetante-bambu-2l','Desinfetante Bambu 2L',6)">Adicionar</button>
   </div>
   <div class="linha">
     <span>5L — R$ 15,00</span>
-    <button onclick="addProduto('Desinfetante Bambu 5L',15)">Adicionar</button>
+      <button onclick="addProduto('desinfetante-bambu-5l','Desinfetante Bambu 5L',15)">Adicionar</button>
   </div>
 </div>
 </div>
@@ -1319,11 +1319,11 @@ data-nomes="desinfetante, desinfetante liquido, limpa tudo, limpeza, produto de 
 <div class="variacoes">
   <div class="linha">
     <span>2L — R$ 6,00</span>
-    <button onclick="addProduto('Desinfetante Dove 2L',6)">Adicionar</button>
+   <button onclick="addProduto('desinfetante-eucalipto-2l','Desinfetante Dove 2L',6)">Adicionar</button>
   </div>
   <div class="linha">
     <span>5L — R$ 15,00</span>
-    <button onclick="addProduto('Desinfetante Dove 5L',15)">Adicionar</button>
+   <button onclick="addProduto('desinfetante-eucalipto-2l','Desinfetante Dove 2L',6)">Adicionar</button>
   </div>
 </div>
 </div>
@@ -1337,11 +1337,11 @@ data-nomes="desinfetante, desinfetante liquido, limpa tudo, limpeza, produto de 
 <div class="variacoes">
   <div class="linha">
     <span>2L — R$ 6,00</span>
-    <button onclick="addProduto('Desinfetante Eucalipto 2L',6)">Adicionar</button>
+<button onclick="addProduto('desinfetante-eucalipto-2l','Desinfetante Eucalipto 2L',6)">Adicionar</button>
   </div>
   <div class="linha">
     <span>5L — R$ 15,00</span>
-    <button onclick="addProduto('Desinfetante Eucalipto 5L',15)">Adicionar</button>
+  <button onclick="addProduto('desinfetante-eucalipto-5l','Desinfetante Eucalipto 5L',15)">Adicionar</button>
   </div>
 </div>
 </div>
@@ -1373,11 +1373,11 @@ data-nomes="desinfetante, desinfetante liquido, limpa tudo, limpeza, produto de 
 <div class="variacoes">
   <div class="linha">
     <span>2L — R$ 6,00</span>
-    <button onclick="addProduto('Desinfetante Lavanda 2L',6)">Adicionar</button>
+  <button onclick="addProduto('desinfetante-lavanda-2l','Desinfetante Lavanda 2L',6)">Adicionar</button>
   </div>
   <div class="linha">
     <span>5L — R$ 15,00</span>
-    <button onclick="addProduto('Desinfetante Lavanda 5L',15)">Adicionar</button>
+     <button onclick="addProduto('desinfetante-lavanda-5l','Desinfetante Lavanda 5L',15)">Adicionar</button>
   </div>
 </div>
 </div>
