--- a/index.html
+++ b/index.html
@@ -3899,6 +3899,24 @@ Versátil, eficiente e fácil de usar em casa.
   const db = firebase.firestore();
   const auth = firebase.auth();
 
+  function loginAdmin() {
+  const email = document.getElementById("emailAdmin").value;
+  const senha = document.getElementById("senhaAdmin").value;
+
+  if (!email || !senha) {
+    alert("Preencha e-mail e senha");
+    return;
+  }
+
+  auth.signInWithEmailAndPassword(email, senha)
+    .then(() => {
+      alert("Admin logado com sucesso");
+    })
+    .catch(() => {
+      alert("E-mail ou senha inválidos");
+    });
+}
+
   let adminLogado = false;
 
   function getUserId() {
@@ -3914,18 +3932,36 @@ Versátil, eficiente e fácil de usar em casa.
     return adminLogado === true;
   }
 
-  auth.onAuthStateChanged(user => {
-    if (user && user.email === "ffgustavo642@gmail.com") {
+auth.onAuthStateChanged(user => {
+
+  if (!user) {
+    adminLogado = false;
+    esconderPainelAdmin();
+    document.getElementById("loginAdmin").style.display = "block";
+    return;
+  }
+
+  db.collection("admins").doc(user.uid).get().then(doc => {
+    if (doc.exists) {
       adminLogado = true;
+      mostrarPainelAdmin();
+      carregarEstoqueAdmin();
+      document.getElementById("loginAdmin").style.display = "none";
       console.log("ADMIN LOGADO");
-    } else {
-      adminLogado = false;
-    }
+  } else {
+  adminLogado = false;
+  esconderPainelAdmin();
+  document.getElementById("loginAdmin").style.display = "block";
+  alert("Este usuário não é administrador");
+  auth.signOut(); // 🔴 ADICIONE ESTA LINHA
+}
+
   });
+
+});
 
 let estoque = {};
 
-// 🔥 LER ESTOQUE EM TEMPO REAL
 db.collection("estoque").onSnapshot(snapshot => {
   snapshot.forEach(doc => {
     estoque[doc.id] = doc.data().quantidade;
@@ -3933,8 +3969,11 @@ db.collection("estoque").onSnapshot(snapshot => {
 
   atualizarEstoqueTela();
   bloquearBotoesZerados();
-});
 
+  if (isAdmin()) {
+    carregarEstoqueAdmin();
+  }
+});
 
 function estoqueDisponivel(id) {
   const item = carrinho.find(p => p.id === id);
@@ -3943,6 +3982,9 @@ function estoqueDisponivel(id) {
 }
 
 async function baixarEstoquePedido() {
+
+  if (carrinho.length === 0) return;
+
   const batch = db.batch();
 
   carrinho.forEach(item => {
@@ -4251,17 +4293,6 @@ Assim que confirmarmos, preparamos tudo com carinho para você 🙏✨
   // ✅ CODIFICA A MENSAGEM (ESSENCIAL)
   const msgFinal = encodeURIComponent(msg);
 
-  // 🔒 VALIDA ESTOQUE ANTES DE CONFIRMAR
-for (let item of carrinho) {
-  if (estoqueDisponivel(item.id) < 0) {
-    alert(
-      "⚠️ O estoque de um produto mudou.\n" +
-      "Atualize a página e refaça o pedido."
-    );
-    return;
-  }
-}
-
  try {
   // 1️⃣ baixa o estoque no Firebase
   await baixarEstoquePedido();
@@ -4512,11 +4543,6 @@ function removerAvaliacao(idDoc, donoId) {
 document.addEventListener("DOMContentLoaded", () => {
   mostrarAvaliacoes();
   atualizarMedia();
-
-  if (localStorage.getItem("adminFuracao") === "true") {
-    const selo = document.getElementById("seloVerificado");
-    if (selo) selo.style.display = "block";
-  }
 });
 
 function responderAvaliacao(idDoc) {
@@ -4561,7 +4587,98 @@ window.addEventListener("scroll", () => {
   }
 });
 
+  function mostrarPainelAdmin() {
+  const painel = document.getElementById("painelAdmin");
+  if (painel) painel.style.display = "block";
+}
+
+function esconderPainelAdmin() {
+  const painel = document.getElementById("painelAdmin");
+  if (painel) painel.style.display = "none";
+}
+
+  function carregarEstoqueAdmin() {
+  const lista = document.getElementById("listaEstoqueAdmin");
+  if (!lista) return;
+
+  lista.innerHTML = "";
+
+  for (let id in estoque) {
+    lista.innerHTML += `
+      <div style="display:flex; gap:10px; align-items:center; margin-bottom:10px;">
+        <strong>${id}</strong>
+
+        <input
+          type="number"
+          min="0"
+          value="${estoque[id]}"
+          onchange="alterarEstoqueAdmin('${id}', this.value)"
+          style="width:80px;"
+        >
+      </div>
+    `;
+  }
+}
+
+  function alterarEstoqueAdmin(id, valor) {
+  if (!isAdmin()) return; // 🔒 só admin
+
+  valor = Number(valor);
+  if (isNaN(valor) || valor < 0) return;
+
+  db.collection("estoque").doc(id).update({
+    quantidade: valor
+  });
+}
+
 </script>
+
+  <!-- 🔐 LOGIN ADMIN -->
+<div id="loginAdmin" style="
+  background:#fff;
+  padding:20px;
+  margin:20px;
+  border-radius:12px;
+  max-width:400px;
+  display:none;
+">
+
+  <h2>🔐 Login Admin</h2>
+
+  <input
+    type="email"
+    id="emailAdmin"
+    placeholder="E-mail"
+    style="width:100%; margin-bottom:10px;"
+  >
+
+  <input
+    type="password"
+    id="senhaAdmin"
+    placeholder="Senha"
+    style="width:100%; margin-bottom:10px;"
+  >
+
+  <button onclick="loginAdmin()">
+    Entrar
+  </button>
+
+</div>
+
+    <!-- 🔐 PAINEL ADMIN - ESTOQUE -->
+<div id="painelAdmin" style="
+  display:none;
+  background:#fff;
+  padding:20px;
+  margin:20px;
+  border-radius:12px;
+">
+
+  <h2>📦 Painel de Estoque (Admin)</h2>
+
+  <div id="listaEstoqueAdmin"></div>
+
+</div>
 
   <section class="avaliacoes-publicas">
 
@@ -4714,7 +4831,6 @@ document
 // inicia zerado
 atualizarEstrelas(0);
 </script>
-
 
 </body>
 </html>
