--- a/index.html
+++ b/index.html
@@ -1117,6 +1117,40 @@ input[type="search"]::-webkit-search-cancel-button {
   margin-bottom: 15px;
 }
 
+  /* 🔐 LOGIN ADMIN FLUTUANTE */
+.login-admin-flutuante {
+  position: fixed;
+  bottom: 90px; /* fica acima do carrinho */
+  right: 20px;
+  background: #ffffff;
+  padding: 18px;
+  border-radius: 14px;
+  width: 260px;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.15);
+  z-index: 9999;
+  display: none;
+}
+
+/* inputs */
+.login-admin-flutuante input {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 8px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+}
+
+/* botão */
+.login-admin-flutuante button {
+  width: 100%;
+  padding: 8px;
+  border-radius: 8px;
+  border: none;
+  background: #1e88e5;
+  color: #fff;
+  font-weight: bold;
+}
+
 </style>
 </head>
 
@@ -4634,14 +4668,8 @@ function esconderPainelAdmin() {
 </script>
 
   <!-- 🔐 LOGIN ADMIN -->
-<div id="loginAdmin" style="
-  background:#fff;
-  padding:20px;
-  margin:20px;
-  border-radius:12px;
-  max-width:400px;
-  display:none;
-">
+<!-- 🔐 LOGIN ADMIN FLUTUANTE -->
+<div id="loginAdmin" class="login-admin-flutuante">
 
   <h2>🔐 Login Admin</h2>
 
