--- a/index.html
+++ b/index.html
@@ -1514,12 +1514,12 @@ data-nomes="desinfetante, desinfetante liquido, limpa tudo, limpeza, produto de 
 <button onclick="addProduto('lysoform-original-1l','Lysoform Original 1L',18)">Adicionar</button>
   </div>
   <div class="linha">
-    <span>Lavanda 1L — R$ 22,00</span>
+    <span>Lavanda 1L — R$ 18,00</span>
 <button onclick="addProduto('lysoform-lavanda-1l','Lysoform Lavanda 1L',22)">Adicionar</button>
   </div>
   <div class="linha">
-    <span>Citrus 1L — R$ 22,00</span>
-<button onclick="addProduto('lysoform-citrus-1l','Lysoform Citrus 1L',22)">Adicionar</button>
+    <span>Citrus 1L — R$ 18,00</span>
+<button onclick="addProduto('lysoform-citrus-1l','Lysoform Citrus 1L',18)">Adicionar</button>
   </div>
 </div>
 </div>
@@ -2411,6 +2411,10 @@ Versátil, eficiente e fácil de usar em casa.
 <img src="img/dulbarmiga.jpg" alt="Dulbarmiga Inseticida">
   <span class="icone-busca">🔍</span>
 <h3>Dulbarmiga Inseticida</h3>
+  <p class="descricao-produto">
+    Ideal para eliminar Pulgas, Baratas, 
+    Aranhas e Pernilongos.
+  </p>
 <div class="variacoes">
   <div class="linha">
     <span>R$ 35,00</span>
@@ -2883,7 +2887,7 @@ Versátil, eficiente e fácil de usar em casa.
   <span class="icone-busca">🔍</span>
 <h3>Porta Detergente</h3>
 <p class="estoque" id="estoque-porta-detergente">
-  📦 Estoque: 10
+  📦 Estoque: 5
 </p>
 <div class="variacoes">
   <div class="linha">
