--- a/index.html
+++ b/index.html
@@ -3346,8 +3346,8 @@ data-nomes="creolinha, desinfetante forte, limpeza pesada">
 <img src="img/balde.jpg" alt="Baldes">
     <span class="icone-busca">🔍</span>
 <h3>Baldes</h3>
-  <p class="estoque" id="estoque-balde-8l">📦 Estoque: 2</p>
-  <p class="estoque" id="estoque-balde-10l">📦 Estoque: 2</p>
+  <p class="estoque" id="estoque-balde-8l">📦 8L Estoque: 2</p>
+  <p class="estoque" id="estoque-balde-10l">📦 10L Estoque: 2</p>
 <div class="variacoes">
   <div class="linha">
     <span>8L — R$ 10,00</span>
