--- a/index.html
+++ b/index.html
@@ -1541,6 +1541,24 @@ data-nomes="desinfetante, desinfetante liquido, limpa tudo, limpeza, produto de 
   </div>
 </div>
 </div>
+
+<div class="produto limpeza"
+     data-nomes="cloro liquido, cloro líquido, cloro, agua sanitaria, água sanitária, cândida, candida, clineza, limpeza pesada, branqueador, desinfecção">
+  
+  <img src="img/cloro.jpg" alt="Cloro Liquido Clineza">
+  <span class="icone-busca">🔍</span>
+<h3>Cloro Liquido Clineza</h3>
+<div class="variacoes">
+  <div class="linha">
+    <span>2L — R$ 13,00</span>
+    <button onclick="addProduto('cloro-liquido-2l','Cloro Liquido Clineza 2L',13)">Adicionar</button>
+  </div>
+  <div class="linha">
+    <span>5L — R$ 26,00</span>
+    <button onclick="addProduto('cloro-liquido-5l','Cloro Liquido Clineza 5L',26)">Adicionar</button>
+  </div>
+</div>
+</div>
     
 <div class="produto limpeza"
      data-nomes="candida, cândida, agua sanitaria, água sanitária, cloro, limpeza pesada, branqueador, limpeza">
