--- a/index.html
+++ b/index.html
@@ -4899,7 +4899,7 @@ function esconderPainelAdmin() {
 
   <!-- RESUMO DA AVALIAÇÃO (OPÇÃO 2 AQUI) -->
   <div class="resumo-avaliacao">
-    ⭐ <span id="mediaAvaliacao">0.0</span>
+     <span id="mediaAvaliacao">0.0</span>
     (<span id="totalAvaliacoes">0</span> avaliações)
   </div>
 
