--- a/index.html
+++ b/index.html
@@ -1201,32 +1201,21 @@ input[type="search"]::-webkit-search-cancel-button {
   }
 }
 
-.avaliacoes {
-  background: #f9fafc;
-  padding: 50px 20px;
-  text-align: center;
-}
-
-.avaliacoes h2 {
-  font-size: 26px;
-  margin-bottom: 20px; /* dá espaço entre título e avaliações */
-  color: #0d47a1;
-}
-
-.avaliacoes-box {
+.lista-avaliacoes {
   display: flex;
-  flex-direction: column; /* garante que fiquem uma embaixo da outra */
-  align-items: center;    /* centraliza horizontalmente */
-  gap: 20px;              /* espaço entre cada avaliação */
-  margin-top: 10px;
+  flex-direction: column;
+  gap: 15px;
 }
 
 .avaliacao-card {
   background: #fff;
-  padding: 20px;
-  border-radius: 14px;
-  max-width: 260px;
-  box-shadow: 0 6px 18px rgba(0,0,0,0.08);
+  border-radius: 12px;
+  padding: 15px;
+  box-shadow: 0 4px 10px rgba(0,0,0,.08);
+}
+
+.avaliacao-card .estrelas {
+  margin-bottom: 8px;
 }
 
   #sugestoesMaisVendidos {
@@ -1239,19 +1228,6 @@ input[type="search"]::-webkit-search-cancel-button {
 .sugestao-item {
   padding: 5px 0;
   font-size: 14px;
-}
-
-  #listaAvaliacoes {
-  display: flex;
-  flex-direction: column; /* uma embaixo da outra */
-  gap: 15px; /* espaço entre as avaliações */
-  margin-top: 15px; /* espaço do filtro/ título */
-}
-.avaliacao-card {
-  background: #fff;
-  padding: 15px;
-  border-radius: 12px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.08);
 }
 
 </style>
@@ -5732,12 +5708,12 @@ await db.collection("pedidos").add({
 
 }
 
-  setTimeout(() => {
-  window.open(
-    "https://wa.me/5515996585967?text=" + msgFinal,
-    "_blank"
-  );
-}, 300);
+const linkWhats = document.createElement("a");
+linkWhats.href = "https://wa.me/5515996585967?text=" + msgFinal;
+linkWhats.target = "_blank";
+document.body.appendChild(linkWhats);
+linkWhats.click();
+document.body.removeChild(linkWhats);
 
   // MOSTRA TELA DE SUCESSO
 document.getElementById("telaSucesso").style.display = "flex";
@@ -5971,6 +5947,7 @@ function removerAvaliacao(idDoc, donoId) {
 
 document.addEventListener("DOMContentLoaded", () => {
   mostrarAvaliacoes();
+  atualizarMedia(); // ← só isso
 });
 
 function responderAvaliacao(idDoc) {
