--- a/index.html
+++ b/index.html
@@ -1201,21 +1201,33 @@ input[type="search"]::-webkit-search-cancel-button {
   }
 }
 
-.lista-avaliacoes {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
+#avaliacoes {
+  max-width: 900px;
+  margin: auto;
 }
 
-.avaliacao-card {
+.filtro-avaliacoes {
+  display: flex;              /* deixa tudo em linha */
+  gap: 12px;
+  margin: 15px 0 25px;
+  justify-content: center;
+  flex-wrap: wrap;            /* quebra no celular */
+}
+
+.filtro-avaliacoes span {
+  display: inline-flex;
+  align-items: center;
   background: #fff;
-  border-radius: 12px;
-  padding: 15px;
-  box-shadow: 0 4px 10px rgba(0,0,0,.08);
+  padding: 8px 14px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: bold;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  white-space: nowrap;
 }
 
-.avaliacao-card .estrelas {
-  margin-bottom: 8px;
+.filtro-avaliacoes span:hover {
+  background: #f5f5f5;
 }
 
   #sugestoesMaisVendidos {
