--- a/index.html
+++ b/index.html
@@ -6112,9 +6112,9 @@ function esconderPainelAdmin() {
   
 const sugestoesFixas = [
   {
-    id: "sabao-liquido",
-    nome: "Sabão Líquido",
-    imagem: "img/sabao-liquido.jpg",
+    id: "sabao-liquido-bonrruque",
+    nome: "Sabão Líquido Bonrruque",
+    imagem: "img/sabao-liquido-bonrruque.jpg",
     tamanhos: [
       { tamanho: "2L", preco: 12.00 },
       { tamanho: "5L", preco: 25.00 }
@@ -6123,7 +6123,7 @@ const sugestoesFixas = [
   {
     id: "detergente",
     nome: "Detergente",
-    imagem: "img/detergente.jpg",
+    imagem: "img/detergente-neutro.jpg",
     tamanhos: [
       { tamanho: "2L", preco: 10.00 },
       { tamanho: "5L", preco: 20.00 }
