--- a/index.html
+++ b/index.html
@@ -1242,27 +1242,30 @@ input[type="search"]::-webkit-search-cancel-button {
   font-size: 14px;
 }
 
-  .sugestoes-linha {
+ .sugestoes-linha {
   display: flex;
+  flex-direction: row;   /* força lado a lado */
   gap: 15px;
-  overflow-x: auto;
-  padding-bottom: 10px;
+  overflow-x: auto;      /* barra para arrastar */
+  padding: 10px;
 }
 
 .sugestao-card {
-  min-width: 220px;
+  min-width: 230px;
+  max-width: 230px;
   background: #fff;
-  border-radius: 14px;
+  border-radius: 16px;
   padding: 12px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.12);
-  text-align: center;
 }
 
 .sugestao-card img {
   width: 100%;
-  height: 140px;
-  object-fit: contain;
-  border-radius: 10px;
+  height: 180px;          /* ocupa a parte branca */
+  object-fit: cover;     /* preenche igual no site */
+  border-radius: 12px;
+  margin-bottom: 8px;
+  display: block;
 }
 
 .sugestao-card h4 {
